# pytest-playground

./: .gitignore  pyproject.toml
.github/workflows/: python-package-mac.yml
src/example_pkg/: do_something.py
tests/: test_do_something.py
