[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "example_pkg"
version = "0.0.1"
requires-python = ">=3.9"
[tool.hatch.build.targets.wheel]
      packages = ["src/example_pkg"]

# `pytest` configurations
[tool.pytest.ini_options]
testpaths = [
    "./tests"
]
[tool.pytest.addopts]
ignore = [
    "pytest-env/"
]
